kubernetes/apps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    tailscale.com/hostname: "hello"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - "hello"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
